Fixed wrap on schemes.

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ body {
     font-size: 14px;
     word-break: keep-all;
     -ms-word-break: keep-all;
-    white-space: nowrap;
 }
 
 a#players-show,
